devops-starter/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-starter-service
  namespace: devops-starter
spec:
  selector:
    app: devops-starter
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
